--- a/AIFFEL_quest_rs/Exploration/Ex02/kaggle_kakr_housing-Ex02.ipynb
+++ b/AIFFEL_quest_rs/Exploration/Ex02/kaggle_kakr_housing-Ex02.ipynb
@@ -2577,7 +2577,7 @@
    "id": "29727dd9",
    "metadata": {},
    "source": [
-    "Kaggle private score : 118598"
+    "Kaggle private score : 118598. 모델 파라미터와 데이터 전처리를 더 수정해야 함"
    ]
   }
  ],
