2차 실험 업로드
Invalid Notebook - missing attachment error : 깨진 이미지 제거 후 재 업로드

--- a/AIFFEL_quest_rs/GoingDeeper/GD01/2_ResNet_Ablation_Study_Project _2.ipynb
+++ b/AIFFEL_quest_rs/GoingDeeper/GD01/2_ResNet_Ablation_Study_Project _2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "af4dbb4b",
+   "id": "d034c7ac",
    "metadata": {
     "id": "659aae61"
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be78f8c1",
+   "id": "057def15",
    "metadata": {
     "id": "47207ab4"
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab75c89e",
+   "id": "6a98ab42",
    "metadata": {
     "id": "08619474"
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2036881c",
+   "id": "41207e42",
    "metadata": {
     "id": "e149e085"
    },
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3e329696",
+   "id": "46cab7ea",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "78a37c77",
+   "id": "758566c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "92ebf2bf",
+   "id": "9039b716",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c5a9fd8b",
+   "id": "0bcb9484",
    "metadata": {
     "id": "17d48191"
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee16024c",
+   "id": "75917943",
    "metadata": {
     "id": "52c439ad"
    },
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "40b2ad6d",
+   "id": "c0a00337",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "52d576f3",
+   "id": "3fe5cc2e",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f446e6d7",
+   "id": "883f17a1",
    "metadata": {
     "id": "5f895d44"
    },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18562939",
+   "id": "10d6aadc",
    "metadata": {
     "id": "2a799008"
    },
@@ -269,15 +269,13 @@
     " 이미지 데이터의 경우 픽셀 정보를 0 ~ 255 사이의 값으로 가지는데,  \n",
     " 이를 255로 나누어주면 0 ~ 1.0 사이의 값으로 변경\n",
     "\n",
-    " Data Normalization을 하는 이유는 머신러닝에서 scale이 큰 feature의 영향이 비대해지는 것을 방지하고, 딥러닝에서 Local optimum에 빠질 위험을 방지함  \n",
-    "\n",
-    " ![image_3GLaa5Y.max-800x600.png](attachment:image_3GLaa5Y.max-800x600.png)"
+    " Data Normalization을 하는 이유는 머신러닝에서 scale이 큰 feature의 영향이 비대해지는 것을 방지하고, 딥러닝에서 Local optimum에 빠질 위험을 방지함  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4ba8388f",
+   "id": "c8dc7fdd",
    "metadata": {
     "id": "09c2c9d7"
    },
@@ -294,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9ebcb0ee",
+   "id": "cbea74a2",
    "metadata": {
     "id": "9e508805"
    },
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c99142d8",
+   "id": "cc675938",
    "metadata": {},
    "source": [
     "### 메모리 사용 줄이는 법\n",
@@ -328,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a588da41",
+   "id": "df13a3bc",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -355,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "aedb2be0",
+   "id": "b39d95f2",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -383,19 +381,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c6addcf",
+   "id": "ccf7110d",
    "metadata": {
     "id": "6b3dd76b"
    },
    "source": [
     "## 3) 블록 구성하기\n",
-    "![image-2.png](attachment:image-2.png)\n",
     "### ResNet 블록 만들기"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c47ede6",
+   "id": "a18ea621",
    "metadata": {
     "id": "71c28cdb"
    },
@@ -406,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c7d36ccc",
+   "id": "26e90395",
    "metadata": {
     "id": "bc639e6a"
    },
@@ -511,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b60fd236",
+   "id": "5f4c37a3",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -533,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa505f40",
+   "id": "5991e295",
    "metadata": {
     "id": "883d1883"
    },
@@ -544,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ed4ead15",
+   "id": "457a79d1",
    "metadata": {
     "id": "5cf08ad8"
    },
@@ -616,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "905ed9e8",
+   "id": "48419d8a",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -637,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a2493c93",
+   "id": "d2dbe5e3",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -656,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbfcaefd",
+   "id": "889a024a",
    "metadata": {
     "id": "25f33668"
    },
@@ -669,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6f4d56d7",
+   "id": "f9b8bb7f",
    "metadata": {
     "id": "b3116d5b"
    },
@@ -684,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6005c408",
+   "id": "4d79e21f",
    "metadata": {
     "id": "68d57f2f"
    },
@@ -706,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "590b1fc3",
+   "id": "a66bb152",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -727,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "370c859d",
+   "id": "55ac8b2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0a6e219",
+   "id": "2ffc9482",
    "metadata": {},
    "source": [
     "Dead Kernel 문제 발생!  \n",
@@ -767,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df019848",
+   "id": "1f51dee8",
    "metadata": {},
    "source": [
     "### 문제 해결 시도  \n",
@@ -778,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d6260240",
+   "id": "e594370d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "91753452",
+   "id": "bc6216cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d874c1db",
+   "id": "08b3b9c6",
    "metadata": {},
    "source": [
     "**잔차 연결 레이어 오류**  \n",
@@ -955,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9409bf3c",
+   "id": "3a433328",
    "metadata": {},
    "source": [
     "### 데이터의 크기 줄이기 위해 아래 코드 사용\n",
@@ -967,7 +964,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9fddbfef",
+   "id": "ac40af03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3a2f78fa",
+   "id": "bb17effc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "878a0fe0",
+   "id": "f630a878",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "34623764",
+   "id": "0aaa6556",
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "125eadc7",
+   "id": "69c49d55",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2068,7 +2065,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9d43cefd",
+   "id": "d67881ab",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25dffb42",
+   "id": "666541ff",
    "metadata": {},
    "source": [
     "**여전히 오류**  \n",
@@ -2470,7 +2467,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "86ec7787",
+   "id": "e21075db",
    "metadata": {
     "id": "b3116d5b"
    },
@@ -2486,7 +2483,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "dce3abbc",
+   "id": "18c00f56",
    "metadata": {
     "id": "68d57f2f"
    },
@@ -2543,7 +2540,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7a9c3fb6",
+   "id": "26a4a169",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2573,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "57828903",
+   "id": "5b0f151b",
    "metadata": {},
    "outputs": [
     {
@@ -2595,7 +2592,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a994f534",
+   "id": "2a4b241f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2617,7 +2614,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "3ed7058c",
+   "id": "03a9f18f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2633,7 +2630,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "c641dc38",
+   "id": "96b119be",
    "metadata": {},
    "outputs": [
     {
@@ -2651,7 +2648,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "85bc5fdf",
+   "id": "6fca9ece",
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2668,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "12add864",
+   "id": "1131aeb0",
    "metadata": {},
    "outputs": [
     {
@@ -2688,7 +2685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2bd74c9",
+   "id": "090c2978",
    "metadata": {
     "id": "25f33668"
    },
@@ -2701,7 +2698,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d69fcf25",
+   "id": "8105ba6b",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2727,7 +2724,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "71d0e076",
+   "id": "20601ff4",
    "metadata": {
     "id": "a973c646"
    },
@@ -2748,7 +2745,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1a49b668",
+   "id": "639aff35",
    "metadata": {
     "scrolled": true
    },
@@ -2813,7 +2810,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "aa17b5b1",
+   "id": "3961e8d7",
    "metadata": {},
    "outputs": [
     {
@@ -2859,7 +2856,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "283b3ee3",
+   "id": "0ceff9c1",
    "metadata": {},
    "outputs": [
     {
@@ -2911,7 +2908,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d712e558",
+   "id": "e45c9fb1",
    "metadata": {},
    "outputs": [
     {
@@ -2962,7 +2959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5f9cd09",
+   "id": "40ae9bea",
    "metadata": {},
    "source": [
     "**loss가 nan으로 나오는 결과 발생**  \n",
@@ -2985,7 +2982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "393a583b",
+   "id": "00d8d97c",
    "metadata": {
     "id": "de4e930b"
    },
@@ -2996,7 +2993,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e26dfe29",
+   "id": "b3c9d581",
    "metadata": {
     "id": "dbc03370"
    },
@@ -3031,7 +3028,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3d84fe55",
+   "id": "cc782b6e",
    "metadata": {
     "id": "34b251a8"
    },
@@ -3064,7 +3061,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "e8232c25",
+   "id": "ee78cfd6",
    "metadata": {
     "id": "60e6df9a"
    },
@@ -3111,7 +3108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4e2fe05",
+   "id": "b7a8cab6",
    "metadata": {},
    "source": [
     "### 2차 회고  \n",
